feat: added new GetSignatureRequestsByEpoch ednpoint
