# docs/api/v1/api.swagger.json
@@ -287,6 +287,39 @@
         ]
       }
     },
+    "/v1/signature-requests/epoch/{epoch}": {
+      "get": {
+        "summary": "Get all signature requests by epoch",
+        "operationId": "SymbioticAPIService_GetSignatureRequestsByEpoch",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetSignatureRequestsByEpochResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "epoch",
+            "description": "Epoch number",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "SymbioticAPIService"
+        ]
+      }
+    },
     "/v1/signatures/epoch/{epoch}": {
       "get": {
         "summary": "Get signature by epoch",
@@ -866,23 +899,25 @@
     "GetSignatureRequestResponse": {
       "type": "object",
       "properties": {
-        "keyTag": {
-          "type": "integer",
-          "format": "int64",
-          "title": "Key tag identifier (0-127)"
-        },
-        "message": {
-          "type": "string",
-          "format": "byte",
-          "title": "Message to be signed"
-        },
-        "requiredEpoch": {
-          "type": "string",
-          "format": "uint64",
-          "title": "Required epoch"
+        "signatureRequest": {
+          "$ref": "#/definitions/SignatureRequest"
         }
       },
       "title": "Response message for getting signature request"
+    },
+    "GetSignatureRequestsByEpochResponse": {
+      "type": "object",
+      "properties": {
+        "signatureRequests": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/SignatureRequest"
+          },
+          "title": "List of all signature requests for the epoch"
+        }
+      },
+      "title": "Response message for getting all signature requests by epoch"
     },
     "GetSignaturesByEpochResponse": {
       "type": "object",
@@ -1124,6 +1159,31 @@
         }
       },
       "title": "Digital signature"
+    },
+    "SignatureRequest": {
+      "type": "object",
+      "properties": {
+        "requestId": {
+          "type": "string",
+          "title": "Request ID"
+        },
+        "keyTag": {
+          "type": "integer",
+          "format": "int64",
+          "title": "Key tag identifier (0-127)"
+        },
+        "message": {
+          "type": "string",
+          "format": "byte",
+          "title": "Message to be signed"
+        },
+        "requiredEpoch": {
+          "type": "string",
+          "format": "uint64",
+          "title": "Required epoch"
+        }
+      },
+      "title": "SignatureRequest represents a signature request"
     },
     "Status": {
       "type": "object",
