# internal/gen/api/v1/api.pb.gw.go
@@ -278,6 +278,45 @@ func local_request_SymbioticAPIService_GetSignatureRequestIDsByEpoch_0(ctx conte
 	return msg, metadata, err
 }
 
+func request_SymbioticAPIService_GetSignatureRequestsByEpoch_0(ctx context.Context, marshaler runtime.Marshaler, client SymbioticAPIServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetSignatureRequestsByEpochRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	val, ok := pathParams["epoch"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "epoch")
+	}
+	protoReq.Epoch, err = runtime.Uint64(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "epoch", err)
+	}
+	msg, err := client.GetSignatureRequestsByEpoch(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_SymbioticAPIService_GetSignatureRequestsByEpoch_0(ctx context.Context, marshaler runtime.Marshaler, server SymbioticAPIServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetSignatureRequestsByEpochRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["epoch"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "epoch")
+	}
+	protoReq.Epoch, err = runtime.Uint64(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "epoch", err)
+	}
+	msg, err := server.GetSignatureRequestsByEpoch(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_SymbioticAPIService_GetSignatureRequest_0(ctx context.Context, marshaler runtime.Marshaler, client SymbioticAPIServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq GetSignatureRequestRequest
@@ -908,6 +947,26 @@ func RegisterSymbioticAPIServiceHandlerServer(ctx context.Context, mux *runtime.
 		}
 		forward_SymbioticAPIService_GetSignatureRequestIDsByEpoch_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_SymbioticAPIService_GetSignatureRequestsByEpoch_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.proto.v1.SymbioticAPIService/GetSignatureRequestsByEpoch", runtime.WithHTTPPathPattern("/v1/signature-requests/epoch/{epoch}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SymbioticAPIService_GetSignatureRequestsByEpoch_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SymbioticAPIService_GetSignatureRequestsByEpoch_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodGet, pattern_SymbioticAPIService_GetSignatureRequest_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1288,6 +1347,23 @@ func RegisterSymbioticAPIServiceHandlerClient(ctx context.Context, mux *runtime.
 		}
 		forward_SymbioticAPIService_GetSignatureRequestIDsByEpoch_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_SymbioticAPIService_GetSignatureRequestsByEpoch_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.proto.v1.SymbioticAPIService/GetSignatureRequestsByEpoch", runtime.WithHTTPPathPattern("/v1/signature-requests/epoch/{epoch}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SymbioticAPIService_GetSignatureRequestsByEpoch_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SymbioticAPIService_GetSignatureRequestsByEpoch_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodGet, pattern_SymbioticAPIService_GetSignatureRequest_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1520,6 +1596,7 @@ var (
 	pattern_SymbioticAPIService_GetSignatures_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "signatures", "request_id"}, ""))
 	pattern_SymbioticAPIService_GetSignaturesByEpoch_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 2}, []string{"v1", "signatures", "epoch"}, ""))
 	pattern_SymbioticAPIService_GetSignatureRequestIDsByEpoch_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 2}, []string{"v1", "signature-request-ids", "epoch"}, ""))
+	pattern_SymbioticAPIService_GetSignatureRequestsByEpoch_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 2}, []string{"v1", "signature-requests", "epoch"}, ""))
 	pattern_SymbioticAPIService_GetSignatureRequest_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "signature-request", "request_id"}, ""))
 	pattern_SymbioticAPIService_GetAggregationStatus_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "aggregation", "status", "request_id"}, ""))
 	pattern_SymbioticAPIService_GetValidatorSet_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "validator-set"}, ""))
@@ -1543,6 +1620,7 @@ var (
 	forward_SymbioticAPIService_GetSignatures_0                 = runtime.ForwardResponseMessage
 	forward_SymbioticAPIService_GetSignaturesByEpoch_0          = runtime.ForwardResponseMessage
 	forward_SymbioticAPIService_GetSignatureRequestIDsByEpoch_0 = runtime.ForwardResponseMessage
+	forward_SymbioticAPIService_GetSignatureRequestsByEpoch_0   = runtime.ForwardResponseMessage
 	forward_SymbioticAPIService_GetSignatureRequest_0           = runtime.ForwardResponseMessage
 	forward_SymbioticAPIService_GetAggregationStatus_0          = runtime.ForwardResponseMessage
 	forward_SymbioticAPIService_GetValidatorSet_0               = runtime.ForwardResponseMessage
